--- a/rabbitmq/files/rabbitmq.config.j2
+++ b/rabbitmq/files/rabbitmq.config.j2
@@ -22,6 +22,17 @@
    %% {tcp_listeners, [{"127.0.0.1", 5672},
    %%                  {"::1",       5672}]},
 
+  {% set tcp_listeners = salt['pillar.get']('rabbitmq:config:rabbit:tcp_listeners', {}) %}
+  {% if tcp_listeners %}
+  {tcp_listeners, [
+    {% set entries = [] %}
+    {% for host, port in tcp_listeners.items() %}
+    {% do entries.append('{"' + host + '", ' + port | string + '}') %} 
+    {% endfor %}
+    {{ entries | join(',') }}
+  {% endif %}
+  ]},
+
    %% SSL listeners are configured in the same fashion as TCP listeners,
    %% including the option to control the choice of interface.
    %%
