feat(suse): basic suse support

--- a/rabbitmq/package-map.jinja
+++ b/rabbitmq/package-map.jinja
@@ -4,6 +4,8 @@
     'CentOS': {'rabbitmq-server': 'rabbitmq-server'},
     'Fedora': {'rabbitmq-server': 'rabbitmq-server'},
     'RedHat': {'rabbitmq-server': 'rabbitmq-server'},
+    'Suse': {'rabbitmq-server': 'rabbitmq-server'},
+    'SUSE': {'rabbitmq-server': 'rabbitmq-server'},
     'Gentoo': {'rabbitmq-server': 'net-misc/rabbitmq-server'}
 } %}
 
