--- a/rabbitmq/libmapstack.jinja
+++ b/rabbitmq/libmapstack.jinja
@@ -1,8 +1,9 @@
 {#- -*- coding: utf-8 -*- #}
 {#- vim: ft=jinja #}
 
+{#- Get the `tplroot` from `tpldir` #}
 {%- set tplroot = tpldir.split("/")[0] %}
-{%- from tplroot ~ "/libmatchers.jinja" import parse_matchers, query_map %}
+{%- from tplroot ~ "/libmatchers.jinja" import parse_matchers, query_map with context %}
 
 {%- set _default_config_dirs = [
       "parameters/",
