--- a/rabbitmq/libmatchers.jinja
+++ b/rabbitmq/libmatchers.jinja
@@ -1,8 +1,9 @@
 {#- -*- coding: utf-8 -*- #}
 {#- vim: ft=jinja #}
 
+{#- Get the `tplroot` from `tpldir` #}
 {%- set tplroot = tpldir.split("/")[0] %}
-{%- from tplroot ~ "/libsaltcli.jinja" import cli %}
+{%- from tplroot ~ "/libsaltcli.jinja" import cli with context %}
 
 {%- set query_map = {
       "C": "config.get",
